[package]
name = "MinecraftTranslator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
rand = "0.8"
sha256 = "1.0.3"
once_cell = "1"
glob = "0.3.1"
faster-hex = "0.8.1"
serde_json = { version = "1.0.107", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
ureq = "2.7.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
crossterm = "0.27.0"
terminal-emoji = "0.4.1"
